[gd_scene load_steps=2 format=2]

[ext_resource path="res://Remapper.gd" type="Script" id=1]

[node name="Remapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remaps" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="HBoxContainer" parent="Remaps"]
margin_right = 99.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Remaps/Actions"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
text = "Change Color"

[node name="ColorChangeInputBtn" type="Button" parent="Remaps/Actions"]
margin_left = 87.0
margin_right = 99.0
margin_bottom = 20.0
flat = true

[node name="Label" type="Label" parent="Remaps"]
margin_top = 24.0
margin_right = 99.0
margin_bottom = 38.0

[node name="OKBtn" type="HBoxContainer" parent="Remaps"]
margin_top = 42.0
margin_right = 99.0
margin_bottom = 62.0

[node name="Control" type="Control" parent="Remaps/OKBtn"]
margin_bottom = 20.0

[node name="Button" type="Button" parent="Remaps/OKBtn"]
margin_left = 4.0
margin_right = 35.0
margin_bottom = 20.0
text = "OK"

[node name="Control2" type="Control" parent="Remaps/OKBtn"]
margin_left = 39.0
margin_right = 39.0
margin_bottom = 20.0
[connection signal="pressed" from="Remaps/Actions/ColorChangeInputBtn" to="." method="_on_ColorChangeInputBtn_pressed"]
[connection signal="pressed" from="Remaps/OKBtn/Button" to="." method="_on_Button_pressed"]
